--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -12,7 +12,7 @@
   <nav class="navbar">
     
     <div class="logo">
-        <a href="/" class="logo-link">
+        <a class="logo-link">
             Opera Archívum
         </a>
     </div>
